--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,10 @@ p {
     margin-top: 3rem;
 }
 
+.margin__top__ten {
+    margin-top: 10rem;
+}
+
 .no__overflow {
     overflow: hidden;
 }
@@ -207,12 +211,24 @@ p {
     font-size: 5rem;
 }
 
+.font__small {
+    font-size: 1.5rem;
+}
+
+.font__two {
+    font-size: 2rem;
+}
+
 .regular__image {
     width: 100%;
 }
 
 .radius__two {
     border-radius: 2rem;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 /* FIXME: Global classes end */
@@ -390,7 +406,46 @@ p {
 
 /* FIXME: About ends */
 
+/* TODO: Products start */
+
+.product__container .regular__image {
+    border: 4px solid var(--green);
+}
+
+/* FIXME: Products end */
+
 /* TODO: Media queries start */
+
+@media screen and (min-width: 500px) {
+
+    /* TODO: Products adjustments */
+
+    .product__section__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .products__container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 90rem;
+    }
+
+    .product__container {
+        width: 20rem;
+    }
+
+    .product__container .regular__image {
+        height: 25rem;
+        width: 20rem;
+        object-fit: cover;
+    }
+
+    /* FIXME: Products adjustments end */
+    
+}
 
 @media screen and (min-width: 600px) {
 
@@ -406,6 +461,23 @@ p {
     }
 
     /* FIXME: About adjustments end */
+
+    /* TODO: Products adjustments */
+
+    .products__container {
+        gap: 8rem;
+    }
+
+    .product__container {
+        width: 24rem;
+    }
+
+    .product__container .regular__image {
+        height: 30rem;
+        width: 24rem;
+    }
+
+    /* FIXME: Products adjustments end */
     
 }
 
