--- a/css/styles.css
+++ b/css/styles.css
@@ -434,6 +434,36 @@ p {
 
 /* FIXME: Products end */
 
+/* TODO: Store images start */
+
+.store-section {
+    background: rgb(31, 29, 29);
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 8rem;
+}
+
+.store__content {
+    gap: 0;
+}
+
+.store__content picture {
+    border-top: 5px dotted var(--green);
+    padding: 3rem 0;
+}
+
+.store__content picture:last-of-type {
+    border-bottom: 5px dotted var(--green);
+}
+
+.store__content img {
+    width: 100%;
+    max-height: 170rem;
+    object-fit: cover;
+}
+
+/* FIXME: Store images end */
+
 /* TODO: Whatsapp starts */
 
 body .fa-whatsapp {
@@ -442,6 +472,7 @@ body .fa-whatsapp {
     right: 6%;
     bottom: 10%;
     font-size: 8rem;
+    z-index: 5;
 }
 
 /* FIXME: Whatsapp ends */
@@ -673,6 +704,50 @@ body .fa-whatsapp {
     }
 
     /* FIXME: Hero section adjustments end */
+
+    /* TODO: Store images adjustments */
+
+    .store__content {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 128rem;
+    }
+    
+    .store__content picture {
+        border-top: none;
+        padding: 3rem 3rem;
+        border-right: 5px dotted var(--green);
+        overflow: hidden;
+    }
+
+    .store__content picture,
+    .store__content picture:nth-child(2) {
+        margin-bottom: .5rem;
+    }
+    
+    .store__content picture:nth-child(4),
+    .store__content picture:nth-child(5),
+    .store__content picture:nth-child(6) {
+        border-top: 5px dotted var(--green);
+    }
+
+    .store__content picture:nth-child(3) {
+        border-right: none;
+    }
+
+    .store__content picture:last-of-type {
+        border-bottom: none;
+        border-right: none;
+    }
+    
+    .store__content img {
+        width: 35rem;
+        height: 18rem;
+        object-fit: cover;
+    }
+
+    /* FIXME: Store images adjustments end */
     
 }
 
